# sc-prize-me

./: .gitignore  Cargo.toml  README.md  erdpy.data-storage.json  usefull_urls.txt
loto/: archi_v2.epgz
prize/contract/prize/: .gitignore  Cargo.toml  abi.sh  deploy-devnet.interaction.json  deploy-testnet.interaction.json  erdpy.data-storage.json
prize/contract/prize/interaction/: bech32_2_hex.py  devnet.snippets.sh  devnet.wallets.sh  set_context.sh  set_context_perso2.sh  set_context_perso3.sh  test_wallets.sh  testnet.snippets.sh
prize/contract/prize/mandos/: TestPlan.ods  err_admin_endpoints_bad_caller.scen.json  nom_cleanClaimed_2_out_of_4.scen.json  nom_cleanClaimed_one_by_one.scen.json  nom_distributePrizes.scen.json  nom_ended.scen.json  nom_prize_egld.scen.json  nom_prize_esdt.scen.json  nom_prize_life_cycle.scen.json  nom_prize_nft.scen.json  nom_prize_sft.scen.json  nom_randomness.scen.json  nom_triggerEnded.scen.json  tests_overview
prize/contract/prize/mandos/steps/: create_prizes.steps.json  init_accounts.steps.json  initial_setup.steps.json
prize/contract/prize/mandos/steps/admin_actions/: admin_add_addr_blacklist_bad_caller.steps.json  admin_claimFees_bad_caller.steps.json  admin_cleanClaimed_bad_caller.steps.json  (+14 more)
prize/contract/prize/meta/: Cargo.toml
prize/contract/prize/meta/src/: main.rs
prize/contract/prize/src/: charity.rs  common_types.rs  event.rs  fee.rs  fee_policy.rs  instance.rs  instance_status.rs  instance_structs.rs  lib.rs  macros.rs  parameter.rs  player.rs  security.rs  sponsor.rs
prize/contract/prize/wasm/: Cargo.toml
(+246 files in other folders)
