[package]
name = "prize"
version = "0.0.1"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.26.0"
#features = ["derive"]

[dependencies.elrond-wasm-derive]
version = "0.26.0"

[dependencies.elrond-wasm-node]
version = "0.26.0"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.26.0"

[dependencies]
variant_count = "1.1"
